# FancyEngine2

./: .gitignore  .gitmodules  INSTALL  STYLEGUIDE  TODO  dub.json  fe2.asd  fetch-libs.sh  magic  meson.build  meson_options.txt  prefs.toml  rough-design-sketch.txt  state  test.lisp
licenses/: LICENSE.BSD3.txt  LICENSING.txt  NICETHANKS.txt  THANKS.txt  shortlist.txt
src/: app.d  asset.d  config.d  cstdlib.d  fe2-entry.lisp  logging.d  preload.d  queue.d  repl.d  scriptable.d  stdlib.d  stdmath.d  stdmem.d  sumtype.d  threaded_script.d
src/assets/: asset.d
src/graphics/: fancy_font.d  fancy_font_gl.d  fancy_model.d  fancy_model_gl.d  fancy_model_vk.d  font.d  font_gl.d  font_vk.d  framebuffer.d  framebuffer_gl.d  framebuffer_vk.d  gl_thread.d  graphics_manager.d  graphics_manager_gl.d  mesh.d  mesh_gl.d  mesh_vk.d  model.d  model_gl.d  model_vk.d  shading.d  shading_d3d11.d  shading_gl.d  shading_vk.d  tex.d  tex_d3d11.d  tex_gl.d  tex_vk.d  windows_gl.d
src/math/: .vec2.lisp.swp  vec2.lisp  vec3.lisp  vec4.lisp
src/opengl-gfx/: gfx.lisp
src/scripting/: ecl.d  ecl_lib_interface.d  moonjit.d  package.d  s7.d  s7_lib_interface.d
src/sound/: gorilla.d
src/std/: concurrency.d
src/win/: win.lisp
src/windowing/: arcan_lib_interface.d  key.d  windows.d  windows_d3d11.d  windows_gl.d  windows_vk.d  windowsarcan.d
todo/: 01-shortterm.txt  02-midterm.txt  03-longterm.txt  04-wishlist.txt  tags.txt
